<?xml version="1.0"?>
<package format="3">
  <name>baxter_description</name>
  <version>1.2.0</version>
  <description>URDF and meshes describing Baxter Research Robot</description>
  <maintainer email="rsdk.support@rethinkrobotics.com">Rethink Robotics Inc.</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
